@@ -1,6 +1,7 @@
 [1.9.0-SNAPSHOT]
 - Update to LibGDX 1.9.8
 - [BREAKING] UiContainer can now select a NavigationMode instead of only enabling/disabling keyboard
+- [BREAKING] Font loading split into BitmapFont and MonospaceFont
 - Added SpriteSheet class
 - Added GameDataSerializable interface for reading/writing binary data
 - Added method to get file handles within the player data directory
@@ -15,6 +16,7 @@
 - Fixed UI navigation cursor not updating when switching between controller and mouse
 - Fixed DesktopPlayerData not ensuring data directory exists when writing JSON or binary files
 - Fixed Sprite not carrying over flip status from TextureRegion
+- (#79) Add isInterpolateRequired() to collision classes
 
 [1.8.2]
 - Fixed UI hotkeys triggering actions while elements are disabled
